--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@supabase/supabase-js": "^2.39.0",
+    "@xenova/transformers": "^2.17.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
