--- a/package.json
+++ b/package.json
@@ -7,28 +7,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "db:setup": "node scripts/setup-supabase-cli.js",
-    "db:setup-direct": "supabase db execute --file scripts/combined-migration.sql",
-    "db:test": "node scripts/test-connection.js",
-    "db:manual": "node scripts/execute-sql-manually.js",
-    "db:sync-problems": "node scripts/sync-problems.js",
-    "setup:all": "node scripts/setup-all.js"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.36.5",
-    "@supabase/supabase-js": "^2.39.0",
     "@xenova/transformers": "^2.17.2",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "svix": "^1.15.0"
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
     "babel-plugin-react-compiler": "1.0.0",
-    "dotenv": "^16.6.1",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "supabase": "^2.70.5"
+    "eslint-config-next": "16.1.1"
   }
 }
