--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.5",
     "@xenova/transformers": "^2.17.2",
     "next": "16.1.1",
     "react": "19.2.3",
