--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/nextjs": "^6.36.5",
     "@neondatabase/serverless": "^1.0.2",
     "@xenova/transformers": "^2.17.2",
+    "claude": "^0.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "next": "16.1.1",
